rakshith-dir-0001/projects/kalyan-rds/clusternetworkpolicies/cluster-pol1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: cluster-pol1
  project: kalyan-rds
spec:
  rules:
  - name: cluster-rule1
    version: v1
  version: v1
