rakshith-dir-0001/projects/kalyan-rds/clusternetworkpolicies/network-test.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: network-test
  project: kalyan-rds
spec:
  rules:
  - name: network-test
    version: v2
  version: v2
